Add placeholder in skills.html awaiting for further check.

--- a/skills.html
+++ b/skills.html
@@ -1,119 +1,141 @@
-<!--Intro-->
-        <section class="bg-1">
-            <h1>Welcome to Hexterika Breaks Free</h1>
-                <img src="assets/images/hexterika-breaks-free/myProfessionalHeadshot1.jpg" alt="Professional Headshot of Sangsongthong"/>
-                <p><strong>Hello, I'm Sangsongthong</strong> — a multidisciplinary professional passionate about cybersecurity, design, and digital strategy. This site is both my personal portfolio and the home of my freelance brand, <strong>Hexterika</strong>.</p>
-                <p><strong>Hexterika Breaks Free</strong> began as a space for personal growth and self-liberation, and it has since evolved into a professional identity that brings together creativity, security, and adaptability. It reflects my journey and the future I'm building through technology and design.</p>
-                <p>Recognizing that my specialized skills need more time to polish, I am also open to a role in sales, customer service, tech support, and call center.</p>
-                <p><a href="https://youtu.be/U1vDecmO2lU" target="_blank" rel="noopener noreferrer">My Mock Sales Pitch And Proof Of My Spoken English</a></p>
-        </section>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hexterika Breaks Free</title>
+    <link rel="stylesheet" href="assets/css/base.css">
+    <link rel="stylesheet" href="assets/css/contact.css">
+</head>
+<body>
 
-        <!--Core Focuses / Primary Focuses-->
-        <section class="bg-2">
-            <h2>My Primary Focus</h2>
-                <p>My professional path is centered around two main areas that reflect both my passion and evolving expertise:</p>
-                <ul>
-                    <li><strong>Cybersecurity & IT</strong>--<a href="cyberlab.html">Explore Hexterika Cyberlab</a></li>
-                    <li><strong>UX/UI Design</strong>--<a href="designer.html">Visit Hexterika Designer</a></li>
-                </ul>
-                <br>
-                <p>I'm actively pursuing real-world experience in cybersecurity through VDP platforms like Bugcrowd, building on hands-on lab training to prepare for entry-level roles. While continuing to grow in this field, I'm also open to immediate opportunities — remote or relocation-based — in customer support, sales, or call center roles, where my communication skills and tech-savviness can bring value right away. In design, I'm confident in my UX/UI capabilities and currently refining my portfolio to better showcase project outcomes.</p>
-        </section>
-
-        <!--Soft Skills / Transferrable Skills-->
-        <section class="bg-2">
-            <h2>Transferrable Skills</h2>
-                <p>I bring strong transferrable skills developed through international experience, self-driven learning, and cross-functional roles. I'm adaptable, reliable, and effective in both remote and multicultural environments — strengths shaped in part by my U.S. Exchange Student year (see Education) and applied across support, sales, creative, and technical work.</p>
-            <section class="bg-1">
-                <h3>Core Strengths</h3>
-                    <ul>
-                        <li>Time Management & Prioritization</li>
-                        <li>Remote Work & Cross-Timezone Collaboration</li>
-                        <li>CRM Tools: Salesforce, Zoho CRM</li>
-                        <li>Digital Productivity: Google Workspace, Notion, Microsoft Office</li>
-                        <li>Client Support & Multitasking</li>
-                    </ul>
-            </section>
-            <section class="bg-1">
-                <h3>Languages</h3>
-                    <ul>
-                        <li><strong>Thai:</strong> Native</li>
-                        <li><strong>English:</strong> TOEIC 815 (Listening & Reading), Writing C1, Speaking B1</li>
-                        <li><strong>Romanian, French, Spanish:</strong> Beginner</li>
-                    </ul>
-            </section>
-        </section>
-
-        <!--Secondary Focuses-->
-        <section class="bg-1">
-            <h2>My Secondary Focus</h2>
-            <p>In addition to my primary focus areas, I also apply my skills in:</p>
+    <!-- Header Section -->
+    <header>
+        <nav>
             <ul>
-                <li><strong>Programming</strong>
-                    <ul>
-                        <li>Built this website from scratch</li>
-                        <li>Languages: Python, HTML, CSS, JavaScript, React</li>
-                        <li>Version control with Git & GitHub</li>
-                        <li>Arduino coding (self-taught for university project)</li>
-                    </ul>
-                </li>
-                <li><strong>Social Media Marketing</strong>
-                    <ul>
-                        <li>Certified by Meta in Digital Marketing</li>
-                        <li>Skills: campaign strategy, content creation, performance tracking</li>
-                        <li>Manage Facebook & Instagram for:
-                            <ul>
-                                <li><a href="https://www.facebook.com/share/165WozGYNW/" target="_blank" rel="noopener noreferrer">Hexterika Cyberlab Facebook</a></li>
-                                <li><a href="https://www.instagram.com/hexterika.cyberlab?igsh=cTRoaGxmNGxrcmMz" target="_blank" rel="noopener noreferrer">Hexterika Cyberlab Instagram</a></li>
-                                <li><a href="https://www.facebook.com/share/1AYY5bVfaa" target="_blank" rel="noopener noreferrer">Hexterika Designer Facebook</a></li>
-                                <li><a href="https://www.instagram.com/hexterika.designer?igsh=MW83dXM4aG92amtrNw==" target="_blank" rel="noopener noreferrer">Hexterika Designer Instagram</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="cyberlab.html">Hexterika Cyberlab</a></li>
+                <li><a href="designer.html">Hexterika Designer</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="certs.html">Certificates</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
-            <p>These skills support the growth of my Hexterika brand and show my adaptability in the digital space.</p>
-        </section>
+        </nav>
+    </header>
 
-        <!--Education-->
+    <!-- Main Content (Grid Layout) -->
+    <main>
         <section class="bg-1">
-            <h2>Education Background</h2>
-            <ul>
-                <li>
-                    <strong>Bachelor of Sport Science</strong> — Suranaree University of Technology (Thailand)
-                        <ul>
-                            <li>Led an Arduino project for a Sport Tech course — handled planning, coding, and delivery under a tight deadline</li>
-                            <li>Independently began learning Linux and Python as a personal entry point into tech</li>
-                        </ul>
-                </li>
-                <li>
-                    <strong>Exchange Program</strong> — Skyline High School, Colorado, USA
-                        <ul>
-                            <li>Gained real-world English fluency and developed soft skills like adaptability, cross-cultural communication, and problem-solving through full immersion in a U.S. high school environment.</li>
-                        </ul>
-                </li>
-            </ul>
-        </section>
+        <h1>My Comprehensive Skill Set</h1>
+        <p>This page provides a detailed overview of my technical, professional, and complementary skills, showcasing the full breadth of my capabilities as an IT professional transitioning into cybersecurity, driven by the Hexterika philosophy of continuous learning and versatile application.</p>
+    </section>
 
-        <!--Brand Identity & Call to Action-->
-        <section class="bg-2">
-            <h2>About the Brand</h2>
-            <p>
-                Hexterika is the brand name I created to unite my services under one creative and strategic umbrella. 
-                It represents a professional identity separate from my personal background — reflecting my values, journey, and multidisciplinary work.
-            </p>
-            <p>
-                While Hexterika is my current brand, I also use the alias <strong>Gexter</strong> professionally. 
-                Gexter is a persona I developed independently, blending inspirations from fictional characters. 
-                While both names reflect structure and creativity, Hexterika embodies hope and transformation, while Gexter highlights my more unconventional, curious side.
-            </p>
-            <p>
-                I'm not currently pursuing a legal name change due to the complexity involved, but these names remain meaningful identities for me.
-                In the future, I plan to grow Hexterika Breaks Free into a full company that truly embodies this vision.
-            </p>
-            <p>Interested in working together or exploring what I offer?</p>
+    <section class="bg-2">
+        <h2>Technical & Cybersecurity Skills</h2>
+        <p>My hands-on experience and dedicated study have equipped me with proficiency in a wide array of technical domains.</p>
+        
+        <div class="skills-category">
+            <h3>Cybersecurity Tools & Concepts</h3>
             <ul>
-                <li><a href="services.html">View My Services</a></li>
-                <li><a href="contact.html">Get in Touch</a></li>
+                <li><strong>Penetration Testing Tools:</strong> Kali Linux, Nmap, Burp Suite, Metasploit</li>
+                <li><strong>Vulnerability Assessment & Management:</strong> Identification, analysis, and reporting of security weaknesses.</li>
+                <li><strong>Network Reconnaissance:</strong> Footprinting, scanning, enumeration.</li>
+                <li><strong>Web Application Security:</strong> Familiarity with OWASP Top 10, SQL Injection, Cross-Site Scripting (XSS).</li>
+                <li><strong>Threat Detection & Analysis:</strong> Basic familiarity with Elastic SIEM and Splunk for understanding defensive operations and log analysis fundamentals.</li>
+                <li><strong>Social Engineering Awareness:</strong> Understanding of common attack vectors and mitigation strategies.</li>
             </ul>
-        </section>
+        </div>
+
+        <div class="skills-category">
+            <h3>Operating Systems & Servers</h3>
+            <ul>
+                <li><strong>Client OS:</strong> Windows (7, 8, 10, 11), Various Linux Distributions (Ubuntu, Kali Linux)</li>
+                <li><strong>Server OS:</strong> Windows Server (including Active Directory concepts and basic administration)</li>
+                <li><strong>Linux Command Line:</strong> Proficient in Bash scripting and common Linux utilities.</li>
+            </ul>
+        </div>
+
+        <div class="skills-category">
+            <h3>Programming & Scripting</h3>
+            <ul>
+                <li><strong>Python:</strong> Scripting for automation, data parsing, and basic security tool usage.</li>
+                <li><strong>Bash:</strong> Command-line scripting for task automation and system administration in Linux environments.</li>
+                <li><strong>PowerShell:</strong> Scripting for Windows administration and task automation.</li>
+                <li><strong>HTML/CSS:</strong> Proficient in proofreading and refining AI-generated code for web content, ensuring accuracy and semantic correctness.</li>
+            </ul>
+        </div>
+
+        <div class="skills-category">
+            <h3>Networking & Cloud</h3>
+            <ul>
+                <li><strong>Networking Fundamentals:</strong> TCP/IP, DNS, DHCP, HTTP/HTTPS, troubleshooting connectivity.</li>
+                <li><strong>Wireless Networks:</strong> Setup, configuration, and troubleshooting of Wi-Fi networks and access points.</li>
+                <li><strong>Cloud & Virtualization:</strong> Basic understanding of AWS (core services), VirtualBox, Docker (containerization concepts).</li>
+            </ul>
+        </div>
+
+        <div class="skills-category">
+            <h3>Hardware & Infrastructure</h3>
+            <ul>
+                <li><strong>Hardware Repair & Upgrades:</strong> RAM, HDD/SSD replacement, component identification.</li>
+                <li><strong>Cable Management:</strong> RJ45 cable termination, patch panel organization.</li>
+                <li><strong>IoT Devices:</strong> Setup, troubleshooting, and security considerations for smart home devices, solar panel converters, smart TVs, smart refrigerators, CCTV systems.</li>
+            </ul>
+        </div>
+
+        <div class="skills-category">
+            <h3>IT Support & Troubleshooting</h3>
+            <ul>
+                <li><strong>Remote Support Tools:</strong> AnyDesk, TeamViewer (familiarity).</li>
+                <li><strong>Software Installation & Configuration:</strong> Enterprise applications (e.g., Moodle server), productivity suites.</li>
+                <li><strong>Printer Management:</strong> Installation, network configuration, and troubleshooting.</li>
+                <li><strong>Inventory Management:</strong> Tracking and cataloging IT assets.</li>
+                <li><strong>Audio-Visual Systems:</strong> Setup and support for conference room systems (stereo, Zoom setups).</li>
+            </ul>
+        </div>
+    </section>
+
+    <section class="bg-1">
+        <h2>Complementary & Professional Skills</h2>
+        <p>Beyond core IT, my adaptable skillset includes diverse capabilities that enhance my overall value and problem-solving approach.</p>
+
+        <div class="skills-category">
+            <h3>Design & Digital Marketing</h3>
+            <ul>
+                <li><strong>Figma:</strong> User Interface (UI) and User Experience (UX) design principles and tooling.</li>
+                <li><strong>Social Media Marketing:</strong> Basic understanding of strategy and platform utilization for engagement.</li>
+            </ul>
+        </div>
+
+        <div class="skills-category">
+            <h3>Soft Skills & Communication</h3>
+            <ul>
+                <li><strong>Analytical & Problem-Solving:</strong> Adept at diagnosing complex issues, breaking them down, and developing effective solutions.</li>
+                <li><strong>Exceptional English Communication:</strong> Demonstrated through TOEIC scores (Writing: C1, Speaking & Reading: B1, Listening: B2) and a year as an exchange student in the U.S. high school system, fostering fluency, adaptability, and cross-cultural communication.</li>
+                <li><strong>Adaptability & Continuous Learning:</strong> Eager to acquire new skills, thrive in fast-paced environments, and independently research solutions.</li>
+                <li><strong>Client & Customer Focus:</strong> Committed to providing exceptional, patient support and building positive relationships.</li>
+                <li><strong>Collaboration & Teamwork:</strong> Experienced in working with diverse teams (e.g., Parliament IT department, external vendors).</li>
+            </ul>
+        </div>
+
+        <div class="skills-category">
+            <h3>Languages</h3>
+            <ul>
+                <li><strong>Thai:</strong> Native Proficiency</li>
+                <li><strong>English:</strong> Full Professional Proficiency (TOEIC scores listed above)</li>
+                <li><strong>Romanian:</strong> Beginner (Actively learning)</li>
+            </ul>
+        </div>
+    </section>
+
+    <section class="bg-2">
+        <p class="final-note">This list reflects my current capabilities and my commitment to continuous skill development in all areas of my professional interest.</p>
+    </section>
+    </main>
+
+    <!-- Footer Section -->
+    <footer>
+        <p><strong>&copy; 2025 Hexterika Breaks Free. All rights reserved.</strong></p>
+    </footer>
+</body>
+</html>
