Add more intense info into the cyberlab.html

--- a/cyberlab.html
+++ b/cyberlab.html
@@ -92,18 +92,69 @@
 
         <!--Skills & Tools-->
         <section class="bg-2">
+            <section class="bg-2">
             <h2>Skills & Tools</h2>
             <p>These are the core skills and technologies I use regularly in my <strong>penetration testing and broader cybersecurity work</strong>:</p>
-            <ul>
-                <li><strong>Penetration Testing Tools:</strong> Kali Linux, Nmap, Burp Suite, Metasploit</li>
-                <li><strong>Operating Systems:</strong> Linux (Ubuntu, Kali), Windows, Windows Server (Active Directory)</li>
-                <li><strong>Programming & Scripting:</strong> Python, Bash, PowerShell</li>
-                <li><strong>Web Technologies:</strong> HTTP, HTTPS, OWASP Top 10, SQL Injection, XSS</li>
-                <li><strong>Cloud & Virtualization:</strong> AWS (basic), VirtualBox, Docker</li>
-                <li><strong>Threat Detection & Analysis:</strong> Basic familiarity with <strong>Elastic SIEM</strong> and <strong>Splunk</strong> for understanding defensive operations.</li>
-                <li><strong>Other Skills:</strong> Vulnerability Assessment, Network Reconnaissance, Social Engineering Awareness</li>
-                <li><strong>Code Review & Validation:</strong> Proficient in <strong>proofreading and refining AI-generated HTML/CSS code</strong> for accuracy, semantics, and implementation.</li>
-            </ul>
+
+            <section class="skills-category">
+                <h3>Cybersecurity Tools & Concepts</h3>
+                <ul>
+                    <li><strong>Penetration Testing Tools:</strong> Kali Linux, Nmap, Burp Suite, Metasploit</li>
+                    <li><strong>Vulnerability Assessment & Management:</strong> Identification, analysis, and reporting of security weaknesses.</li>
+                    <li><strong>Network Reconnaissance:</strong> Footprinting, scanning, enumeration.</li>
+                    <li><strong>Web Application Security:</strong> Familiarity with OWASP Top 10, SQL Injection, IDOR, File Path Traversal, and concepts like Cross-Site Scripting (XSS).</li>
+                    <li><strong>Threat Detection & Analysis:</strong> Basic familiarity with Elastic SIEM and Splunk for understanding defensive operations and log analysis fundamentals.</li>
+                    <li><strong>Social Engineering Awareness:</strong> Understanding of common attack vectors and mitigation strategies.</li>
+                </ul>
+            </section>
+
+            <section class="skills-category">
+                <h3>Programming & Scripting</h3>
+                <ul>
+                    <li><strong>Python:</strong> Scripting for automation, data parsing, and basic security tool usage.</li>
+                    <li><strong>Bash:</strong> Command-line scripting for task automation and system administration in Linux environments.</li>
+                    <li><strong>PowerShell:</strong> Basic scripting for Windows administration and task automation.</li>
+                    <li><strong>HTML/CSS/JavaScript/React (Front-end Development):</strong> Experience in building and understanding web interfaces. Proficient in proofreading and refining AI-generated code for web content, ensuring accuracy and semantic correctness.</li>
+                </ul>
+            </section>
+
+            <section class="skills-category">
+                <h3>Operating Systems & Servers</h3>
+                <ul>
+                    <li><strong>Client OS:</strong> Windows (10, 11), Various Linux Distributions (Ubuntu, Kali, Arch, Manjaro, Dragon OS, Remux, Parrot, Mint, Tails, Qube OS)</li>
+                    <li><strong>Server OS:</strong> Windows Server (Active Directory Fundamental), Ubuntu Server</li>
+                    <li><strong>Linux Command Line:</strong> Proficient in common Linux utilities.</li>
+                </ul>
+            </section>
+
+            <section class="skills-category">
+                <h3>Networking & Cloud</h3>
+                <ul>
+                    <li><strong>Networking Fundamentals:</strong> TCP/IP, DNS, DHCP, HTTP/HTTPS, troubleshooting connectivity.</li>
+                    <li><strong>Wireless Networks:</strong> Setup, configuration, and troubleshooting of Wi-Fi networks and access points.</li>
+                    <li><strong>Cloud & Virtualization:</strong> Basic understanding of AWS (core services), VirtualBox, Docker (containerization concepts), VMWare Workstation (Free).</li>
+                </ul>
+            </section>
+
+            <section class="skills-category">
+                <h3>Hardware & Infrastructure</h3>
+                <ul>
+                    <li><strong>Hardware Repair & Upgrades:</strong> RAM, HDD/SSD replacement on computer</li>
+                    <li><strong>Cable Management:</strong> RJ45 cable termination, patch panel organization.</li>
+                    <li><strong>IoT Devices:</strong> Setup, troubleshooting, and security considerations for smart home devices, solar panel converters, smart TVs, smart refrigerators, CCTV systems.</li>
+                </ul>
+            </section>
+
+            <section class="skills-category">
+                <h3>IT Support & Troubleshooting</h3>
+                <ul>
+                    <li><strong>Remote Support Tools:</strong> AnyDesk, TeamViewer (familiarity), SSH (with PuTTY, WSL, and Linux).</li>
+                    <li><strong>Software Installation & Configuration:</strong> productivity suites (Microsoft Office), and server-based applications (e.g., Moodle on Ubuntu server)</li>
+                    <li><strong>Printer Management:</strong> Installation, network configuration, and troubleshooting.</li>
+                    <li><strong>Inventory Management:</strong> Tracking and cataloging IT assets.</li>
+                    <li><strong>Audio-Visual Systems:</strong> Setup and support for conference room systems (stereo, Zoom setups).</li>
+                </ul>
+            </section>
         </section>
 
         <!--Featured Projects-->
