I changed the <div> to <section> on cyberlab.html

--- a/cyberlab.html
+++ b/cyberlab.html
@@ -49,7 +49,7 @@
             <section class="work-experience-section">
                 <h3>Relevant Work Experience</h3>
         
-                <div class="experience-card">
+                <section class="experience-card">
                     <h4>IT Technician @ Synchrotron Light Research Institute (Thailand)</h4>
                     <p class="experience-period">May 2023 - April 2024</p>
                     <ul>
@@ -60,9 +60,9 @@
                         <li>Provided support for <strong>conference room audio-visual systems</strong>, including stereo and Zoom setups.</li>
                         <li>Utilized <strong>AnyDesk</strong> for remote control of presentation systems from conference rooms to my computer in the IT department room.</li>
                     </ul>
-                </div>
+                </section>
 
-                <div class="experience-card">
+                <section class="experience-card">
                     <h4>IT Support Assistant @ Thai Parliament (for a Senator)</h4>
                     <p class="experience-period">2020 - 2024 (Paid Position)</p>
                     <ul>
@@ -71,9 +71,9 @@
                         <li>Collaborated frequently with the <strong>Parliament's IT department</strong> to troubleshoot complex technical issues.</li>
                         <li>Ensured reliable connectivity and seamless operation of essential communication platforms.</li>
                     </ul>
-                </div>
+                </section>
 
-                <div class="experience-card">
+                <section class="experience-card">
                     <h4>IT Support Generalist & Home Network/IoT Administrator (Personal Property)</h4>
                     <p class="experience-period">2020 - May 2025 (Self-Employed)</p>
                     <ul>
@@ -84,7 +84,7 @@
                         <li><strong>Collaborated directly with external vendors</strong> (e.g., internet service providers, solar companies, security camera installers) for advanced diagnostics and resolution.</li>
                         <li>Applied a <strong>security-first mindset</strong> when managing smart devices, opting to isolate network-connected features to reduce potential attack vectors where unnecessary.</li>
                     </ul>
-                </div>
+                </section>
             </section>
 
             <p>This section reflects my ongoing growth and commitment to deepening my cybersecurity expertise through applied learning, grounded in a strong, diverse IT background.</p>
